--- a/app/src/main/res/layout/main_post_category_fragment.xml
+++ b/app/src/main/res/layout/main_post_category_fragment.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background"
-    android:paddingHorizontal="@dimen/activity_horizontal_margin"
-    tools:context=".presentation.home.PostCategoryFragment">
+    android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_all_offers"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:nestedScrollingEnabled="false"
-        android:paddingVertical="10dp"
-        android:orientation="vertical"
-        tools:listitem="@layout/main_post_item"/>
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
-</FrameLayout>
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background"
+        android:paddingHorizontal="@dimen/activity_horizontal_margin">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_all_offers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false"
+            android:orientation="vertical"
+            android:paddingVertical="10dp"
+            tools:listitem="@layout/main_post_item" />
+    </FrameLayout>
+</RelativeLayout>
