--- a/app/src/main/res/layout/question_post_answer_item.xml
+++ b/app/src/main/res/layout/question_post_answer_item.xml
@@ -24,16 +24,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_marginBottom="8dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:id="@+id/crdUserData"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:layout_height="wrap_content">
+                    android:gravity="center_vertical">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="36dp"
@@ -64,9 +64,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="0"
-                            android:textSize="14sp"
                             android:text="John Doe"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
 
 
                         <TextView
@@ -76,8 +76,8 @@
                             android:layout_weight="0"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:textSize="10sp"
-                            android:text="Développeur Fullstack - Entreprisesdsdsd" />
+                            android:text="Développeur Fullstack - Entreprisesdsdsd"
+                            android:textSize="10sp" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -98,9 +98,9 @@
                         android:id="@+id/tv_time_ago"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="5h"
                         android:textColor="@color/gray_600"
-                        android:textSize="12sp"
-                        android:text="5h" />
+                        android:textSize="12sp" />
 
                     <ImageView
                         android:layout_width="16dp"
@@ -119,11 +119,11 @@
 
             <LinearLayout
                 android:id="@+id/ll_position_details"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tv_position_title"
@@ -135,12 +135,12 @@
 
                 <LinearLayout
                     android:id="@+id/ll_company_details"
-                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="50dp"
@@ -179,16 +179,58 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/txtCommentBody"
-                style="@style/Paragraph"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="5"
-                android:paddingVertical="8dp"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum ipsum sed neque finibus, sed commodo nunc accumsan. Fusce malesuada pretium felis ut iaculis. Fusce bibendum dapibus pellentesque. In et mauris augue. Praesent porttitor arcu vel erat fringilla accums"
-                android:textSize="14sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ll_up_image"
+                        android:layout_width="@dimen/feed_ic_size"
+                        android:layout_height="@dimen/feed_ic_size"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="@dimen/feed_ic_margin"
+                        android:src="@drawable/ic_up"
+                        app:tint="@color/grey_700" />
+
+                    <TextView
+                        android:id="@+id/ll_interaction_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/feed_text_interaction_size"
+                        android:textColor="@color/grey_700"
+                        android:text="0" />
+
+                    <ImageView
+                        android:id="@+id/ll_down_image"
+                        android:layout_width="@dimen/feed_ic_size"
+                        android:layout_height="@dimen/feed_ic_size"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="@dimen/feed_ic_margin"
+                        android:src="@drawable/ic_down"
+                        app:tint="@color/grey_700" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/txtCommentBody"
+                    style="@style/Paragraph"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="5"
+                    android:paddingVertical="8dp"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum ipsum sed neque finibus, sed commodo nunc accumsan. Fusce malesuada pretium felis ut iaculis. Fusce bibendum dapibus pellentesque. In et mauris augue. Praesent porttitor arcu vel erat fringilla accums"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
