--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -101,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Touts"
+                    android:text="Tout(Posts)"
                     android:textStyle="bold"
                     android:textColor="@color/grey_700" />
 
