--- a/app/src/main/res/layout/report_activity.xml
+++ b/app/src/main/res/layout/report_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.profile.EducationEditActivity"
+    tools:context=".presentation.report.ReportActivity"
     android:background="@color/background_light">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
