feat: showing user posts

--- a/app/src/main/res/layout/user_post_activity.xml
+++ b/app/src/main/res/layout/user_post_activity.xml
@@ -50,7 +50,7 @@
                     android:orientation="vertical">
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_all_offers"
+                        android:id="@+id/rv_user_posts"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:nestedScrollingEnabled="false"
