--- a/app/src/main/res/layout/job_applications_activity.xml
+++ b/app/src/main/res/layout/job_applications_activity.xml
@@ -203,7 +203,7 @@
                             app:tint="@color/grey_700"/>
 
                         <TextView
-                            android:id="@+id/tvPostAnswersCount"
+                            android:id="@+id/tv_applications"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="0 Application"
@@ -216,32 +216,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
-
-                    <LinearLayout
-                        android:id="@+id/ll_share"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="@dimen/feed_ic_size"
-                            android:layout_height="@dimen/feed_ic_size"
-                            android:layout_marginEnd="@dimen/feed_ic_margin"
-                            android:src="@drawable/ic_share"
-                            app:tint="@color/grey_700"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="@dimen/feed_text_interaction_size"
-                            android:text="@string/share"
-                            android:textColor="@color/grey_700"/>
-                    </LinearLayout>
-                    <Space
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -268,7 +242,7 @@
 
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvComments"
+                    android:id="@+id/rvApplications"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
