fix: fixed some basic layout issues

--- a/app/src/main/res/layout/skill_item_layout.xml
+++ b/app/src/main/res/layout/skill_item_layout.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingHorizontal="16dp"
+        android:text="Skill placeholder"
         android:textSize="18sp"
         android:textColor="#000" />
 
