--- a/app/src/main/res/layout/activity_skills_edit.xml
+++ b/app/src/main/res/layout/activity_skills_edit.xml
@@ -43,13 +43,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/background"
+            android:paddingVertical="@dimen/activity_vertical_margin"
+            android:paddingHorizontal="@dimen/activity_horizontal_margin"
             android:orientation="vertical">
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="32dp"
+                android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                 >
 
@@ -90,7 +92,8 @@
                 android:id="@+id/skillsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" />
+                android:layout_marginTop="16dp"
+                tools:listitem="@layout/skill_item_layout"/>
 
 
             <LinearLayout
