--- a/app/src/main/res/layout/job_post_details_fragment.xml
+++ b/app/src/main/res/layout/job_post_details_fragment.xml
@@ -16,8 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingHorizontal="32dp"
-            android:paddingVertical="64dp"
+            android:paddingHorizontal="@dimen/activity_horizontal_margin"
+            android:paddingVertical="@dimen/activity_vertical_margin"
             android:background="@color/background"
             tools:context=".presentation.job_post.create.JobPostCreateActivity">
 
